--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -48,16 +48,13 @@
 
           <div class="row" *ngIf="isField">
 
-            <h2>Combined Game Stats</h2>
+                <h2 class="center-cust">Combined Game Stats</h2>
+
 
             <ngx-charts-advanced-pie-chart [scheme]="colorScheme" [results]="pieData"
               [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)"
               (deactivate)="onDeactivate($event)">
             </ngx-charts-advanced-pie-chart>
-
-            <h2>Individual Game Stats</h2>
-
-
 
           </div>
         </div>
