--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -45,7 +45,7 @@
           </div>
         </div>
           <div class="col-md-3">
-              <h4>Follow Us</h4>
+              <h4>Reach out to us</h4>
               <ul class="social-network social-circle">
                <li><a href="https://www.facebook.com/pages/category/Sports---Recreation/Skirmesh-108898537907505/" class="icofacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
                <li><a href="mailto:skirmesh.net@gmail.com" class="icotwitter" title="twitter"><i class="fa fa-google"></i></a></li>
